# Portfolio

./: .gitignore  CNAME  README.md  homepage.css  index.html  javascript.js  notes.html  projects.html  resume.html  style.css
.obsidian/: workspace.json
CS2420/Assignment7/: EdgeEx.txt  Edges0.txt  Edges1.txt  Edges2.txt  crisis-edges.txt  crisis-nodes.txt  got-edges.txt  got-nodes.txt
CS2610/Assignments/1.3 Artifact/vevn/: pyproject.toml
CS2610/Notes/: 10-10-25.md  10-24-25.md  10-26-25.md  10-27-25.md  10-4-25.md  10-5-25.md  10-6-25.md  11-2-25.md  11-23-25.md  11-24-25.md  11-3-25.md  11-4-25.md  12-5-25.md  12-6-25.md  12-7-25.md  8-25-25.md  8-27-25.md  9-10-25.md  9-14-25.md  9-19-25.md  9-20-25.md  9-26-25.md  9-27-25.md  9-4-25.md  9-5-25.md  9-6-25.md  9-7-25.md  9-8-25.md  AdvancedPython.py  Exam1StudyGuide.md  Exam2StudyGuide.md  MachineCodeNotes.md  hashing.py  middleware.py  test.md  test.py
CS2810/Assignments/: Assignment0.circ  Assignment1.circ  Assignment2.circ  Assignment3.circ
CS2810/Notes/: 10-13-25.md  10-15-25.md  10-17-25.md  10-20-25.md  10-22-25.md  10-24-24.md  10-27-25.md  10-29-25.md  10-3-25.md  10-31-25.md  10-6-25.md  10-8-25.md  11-10-25.md  11-12-25.md  11-14-25.md  11-17-25.md  11-21-25.md  11-24-25.md  11-3-25.md  11-5-25.md  12-1-25.md  12-3-25.md  8-25-25.md  8-27-25.md  8-29-25.md  9-10-25.md  9-12-25.md  9-15-25.md  9-17-25.md  9-22-25.md  9-24-25.md  9-29-25.md  9-3-25.md  9-5-25.md  9-8-25.md  MachineCodeNotes.md  mips.py  practice.md  practice.py
CS3430/Notes/: 1-14-25.md  1-7-25.md  (+1 more)
doc/: Signature.md
(+214 files in other folders)
