[project]
name = "vevn"
version = "0.1.0"
description = ""
authors = [
    {name = "Ammon",email = "157701457+APkenobi175@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "vevn", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
